ACLOCAL_AMFLAGS = -I m4
AUTOMAKE_OPTIONS = subdir-objects

EXTRA_DIST = \
	.gitignore \
	_config.yml _data/home.yml \
	assets/favicon-32.gif assets/favicon-152.png assets/favicon-192.png \
	assets/cpp2json-220x124.png \
	assets/favimage-472x472.jpg assets/favimage-944x472.jpg \
	CHANGELOG.md LICENSE.txt README.md index.md \
        autogen.sh

bin_PROGRAMS = example

example_SOURCES = example.cc cpp2json.h
